--- a/xpi/content/css/hideurlbarrelstop.css
+++ b/xpi/content/css/hideurlbarrelstop.css
@@ -1,3 +1,4 @@
+@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 @-moz-document url(chrome://browser/content/browser.xul){
 	
 	/* hide urlbars stop/reload buttons */
