--- a/xpi/content/css/tabs_curvedall.css
+++ b/xpi/content/css/tabs_curvedall.css
@@ -132,7 +132,8 @@
 }
 
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
-	#ctr_sqtabcolorstab{
+	#ctr_customsqtab_cb,
+	.tabactcolorbox{
 	  visibility: collapse !important;
 	}
 }
