--- a/xpi/content/css/appbutton_transparent.css
+++ b/xpi/content/css/appbutton_transparent.css
@@ -4,7 +4,7 @@
 			   url(chrome://global/content/customizeToolbar.xul) {
 
 	#ctr_appbutton2:not(:hover):not(:active):not([open]){
-	  background-image: rgba(255,255,255,.0) !important;
+	  background-image: linear-gradient(rgba(255,255,255,.0), rgba(255,255,255,.0)) !important;
 	  border-color: hsla(214,89%,21%,.9) !important;
 	  box-shadow: 0 1px 0 hsla(0,0%,100%,.2) inset,
 				  0 0 2px 1px hsla(0,0%,100%,.25) inset !important;
