--- a/xpi/content/css/tabs_curved-r-osx.css
+++ b/xpi/content/css/tabs_curved-r-osx.css
@@ -82,8 +82,8 @@
 }
 
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
-	#tabcolorbox,
-	#tabhovcolorbox,
+	.tabcolorbox,
+	.tabhovcolorbox,
 	#ctr_ccap_t_curved{
 	  visibility: visible !important;
 	}
