--- a/xpi/content/css/tabsontop_off.css
+++ b/xpi/content/css/tabsontop_off.css
@@ -39,17 +39,20 @@
 		margin-bottom: 0px !important;
 		border-radius: 2.5px 2.5px 0 0 !important;
 	}
-	#main-window[chromehidden~="menubar"][sizemode="maximized"] #toolbar-menubar ~ #TabsToolbar,
-	#main-window[sizemode="maximized"] #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar {
+	
+	#main-window[chromehidden~="menubar"][sizemode="maximized"] #toolbar-menubar ~ #TabsToolbar:-moz-locale-dir(ltr),
+	#main-window[sizemode="maximized"] #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar:-moz-locale-dir(ltr),
+	#main-window:not([tabsintitlebar]) #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar:-moz-locale-dir(ltr) {
 	  margin-left: 0px !important;
+	}
+	#main-window[chromehidden~="menubar"][sizemode="maximized"] #toolbar-menubar ~ #TabsToolbar:-moz-locale-dir(rtl),
+	#main-window[sizemode="maximized"] #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar:-moz-locale-dir(rtl),
+	#main-window:not([tabsintitlebar]) #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar:-moz-locale-dir(rtl) {
+	  margin-right: 0px !important;
 	}
 	
 	#main-window[tabsintitlebar] #TabsToolbar .titlebar-placeholder{
 	  visibility: collapse !important;
 	}
-	
-    #main-window:not([tabsintitlebar]) #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar{
-        margin-left: 0px !important;
-    }
 
 }
