--- a/xpi/ctr_os_special/linux/back-forwardextra.css
+++ b/xpi/ctr_os_special/linux/back-forwardextra.css
@@ -2,24 +2,21 @@
 
 @-moz-document url(chrome://browser/content/browser.xul){
 
-	window:not([chromehidden~="toolbar"]) #urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar > #notification-popup-box[hidden] + *:-moz-locale-dir(ltr) {
-	  padding-left: 1px !important;
-	  transition: none !important;
-	}
-	window:not([chromehidden~="toolbar"]) #urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar > #notification-popup-box[hidden] + *:-moz-locale-dir(rtl) {
-	  padding-right: 1px !important;
-	  transition: none !important;
-	}
-	window:not([chromehidden~="toolbar"]) #urlbar-container[forwarddisabled] > #urlbar-wrapper{
-      padding-left: 36px !important;
-	  transition: none !important;
-	}
+	window:not([chromehidden~="toolbar"]) #urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar > #notification-popup-box[hidden] + *:-moz-locale-dir(ltr),
+	window:not([chromehidden~="toolbar"]) #urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar > #notification-popup-box[hidden] + *:-moz-locale-dir(rtl),
+	window:not([chromehidden~="toolbar"]) #urlbar-container[forwarddisabled] > #urlbar-wrapper,
 	window:not([chromehidden~="toolbar"]) #urlbar-container[forwarddisabled] > *{
 	  transition: none !important;
 	}
+	window:not([chromehidden~="toolbar"]) #urlbar-container[forwarddisabled] > #urlbar-wrapper:-moz-locale-dir(ltr){
+      padding-left: 44px !important;
+	}
+	
+	window:not([chromehidden~="toolbar"]) #urlbar-container[forwarddisabled] > #urlbar-wrapper:-moz-locale-dir(rtl){
+      padding-right: 44px !important;
+	}
 	
 	window:not([chromehidden~="toolbar"]) #urlbar-container[forwarddisabled] > #urlbar-wrapper > #urlbar:-moz-locale-dir(ltr) {
-	  margin-left: -6px !important;
 	  transition: none !important;
 	  transition-property:  none !important;
 	  transition-delay: 0s !important;
