--- a/xpi/ctr_os_special/mac/overlayextra.css
+++ b/xpi/ctr_os_special/mac/overlayextra.css
@@ -92,7 +92,16 @@
 	}
 
 	#nav-bar #ctr_appbutton #ctr_appbuttonPopup{
-		margin-top:0px !important;
+	  margin-top:0px !important;
+	}
+	
+	#ctr_appbuttonPopup .menu-iconic-left {
+      padding-right: 4px !important;
+	}
+	
+	#ctr_appbuttonPopup #historyUndoMenu,
+	#ctr_appbuttonPopup #historyUndoWindowMenu{
+	  margin-left: 21px !important;
 	}
 
 	/* ctr addonbar */
@@ -100,21 +109,10 @@
 	#ctr_addon-bar:not(:-moz-lwtheme)[customizing] {
 	  background:linear-gradient(to bottom,#d2d2d2,#d9d9d9,#e9e9e9);
 	}
-	
-	/*#ctr_addon-bar toolbarbutton {
-	  -moz-appearance: none !important;
-	  margin: 0px 3px !important;
-	  padding:0px !important;
+
+	#main-window toolbar #ctr_window-controls {
+	  visibility: collapse !important;
 	}
-	#ctr_addon-bar toolbarbutton .toolbarbutton-icon {
-	  max-width: 18px;
-	  max-height: 18px;
-	}
-	#ctr_addon-bar .toolbarbutton-menubutton-dropmarker {
-	  padding: 0px !important;
-	  margin-left: 1px !important;
-	  margin-right: 1px !important;
-	}*/
 
 }
 
