--- a/xpi/ctr_os_special/winxp/overlayextra.css
+++ b/xpi/ctr_os_special/winxp/overlayextra.css
@@ -135,7 +135,11 @@
 	  max-width: 18px;
 	  max-height: 18px;
 	}
-	#ctr_addon-bar .toolbarbutton-menubutton-dropmarker {
+	#ctr_addon-bar .toolbarbutton-menubutton-dropmarker:-moz-locale-dir(ltr) {
+	  padding: 0px !important;
+	  margin-left: -3px !important;
+	}
+	#ctr_addon-bar .toolbarbutton-menubutton-dropmarker:-moz-locale-dir(rtl) {
 	  padding: 0px !important;
 	  margin-left: -3px !important;
 	}
